--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
 }
 
 /* Typography */
@@ -65,6 +68,8 @@ p {
 
 body {
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  cursor: default;
 }
 
 a {
@@ -81,13 +86,17 @@ ul {
 #navbar {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-pink);
+  background-color: rgb(105, 153, 243);
+  color: var(--color-white);
   align-items: center;
+  padding: 16px;
 }
 
 .navbar__logo {
   display: flex;
   align-items: center;
+  font-size: var(--font-medium);
+  font-weight: var(--font-medium);
 }
 
 .logo {
@@ -103,4 +112,11 @@ ul {
 .navbar__menu--item {
   padding: 8px 12px;
   margin: 0 4px;
+  cursor: pointer;
+}
+
+/* ...item active -> ...item.active가 되는 과정이?? */
+.navbar__menu--item.active {
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
