--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ button {
 .section {
   padding: 50px;
   text-align: center;
+  margin: auto;
+}
+
+.section__container {
   max-width: 1200px;
   margin: auto;
 }
@@ -249,4 +253,49 @@ button {
 #skills {
   background-color: var(--color-yellow);
 }
-zzz
+
+.skillset {
+  display: flex;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+  margin: 20px 0;
+}
+.skillset_title {
+  color: var(--color-white);
+}
+
+.skill {
+  margin: 0 40px;
+  margin-bottom: 20px;
+}
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+.skill__bar {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
+}
+.skill_value {
+  /* width: 100%; */
+  height: 3px;
+  background-color: var(--color-yellow);
+}
+
+.skillset_left {
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding-bottom: 20px;
+}
+.skillset_right {
+  flex-basis: 40%;
+}
+.tools {
+  background-color: var(--color-grey);
+}
+
+.tools, .etc {
+  padding: 20px;
+}
