--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ button {
 }
 
 /* class가 navbar__menu--item과 active가 동시에 성립할 때!(and)
+.navbar__menu--item.active
 둘 중 하나라도 성립할 때(or)는
 .navbar__menuu--item, .active
 이런 형태로 쓴다!! */
@@ -298,4 +299,39 @@ button {
 
 .tools, .etc {
   padding: 20px;
+}
+
+/* Work */
+.work__categories {
+  margin: 40px;
+}
+.category__btn {
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+}
+
+.category__btn.active, .category__btn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+
+.category__btn.active .category__count, .category__btn:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+.category__count {
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
 }
