--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ button {
 #navbar {
   display: flex;
   justify-content: space-between;
-  background-color: rgb(105, 153, 243);
+  background-color: rgb(108, 161, 211);
   color: var(--color-white);
   align-items: center;
   padding: 16px;
@@ -423,4 +423,23 @@ button {
   padding: 18px;
   background-color: var(--color-white);
   border-radius: var(--size-border-radius);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-pink);
+}
+
+.contact__title, .contact__email, .contact__rights {
+  color: var(--color-white);
+}
+.contact__title {
+  margin: 32px 0;
+}
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+.contact__links i:hover {
+  transform: scale(1.3);
 }
