--- a/style.css
+++ b/style.css
@@ -346,10 +346,10 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 280px;
+  width: 350px;
   height: 250px;
   margin: 30px 2px;
-  background-color: yellow;
+  background-color: rgb(252, 252, 129);
 }
 .project__img {
   max-width: 100%;
