--- a/style.css
+++ b/style.css
@@ -142,6 +142,17 @@ button {
   background-color: rgb(71, 126, 209);
 }
 
+.navbar__toggle--btn {
+  position: absolute;
+  right: 32px;
+  top: 24px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
+
+
+}
+
 /* Home */
 #home {
   background: center/cover no-repeat 
@@ -442,4 +453,44 @@ button {
 }
 .contact__links i:hover {
   transform: scale(1.3);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+  .navbar__toggle--btn {
+    display: block;
+  }
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+  .about__majors {
+    flex-direction: column;
+  }
+  .major {
+    margin-bottom: 38px;
+  }
+  .skillset {
+    flex-direction: column;
+  }
+  .project {
+    flex-grow: 1;
+  }
+  .category__btn {
+    margin-bottom: 12px;
+    width: 100%;
+  }
+  .testimonial__avatar {
+    width: 80px;
+    height: 80px;
+  }
+  .job {
+    flex-direction: column;
+  }
 }
