--- a/style.css
+++ b/style.css
@@ -97,12 +97,21 @@ button {
 
 /* Navbar */
 #navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: rgb(108, 161, 211);
+  background-color: transparent;
   color: var(--color-white);
   align-items: center;
   padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar--dark {
+  background-color: var(--color-black);
+  padding: 8px;
+  
 }
 
 .navbar__logo {
@@ -155,9 +164,10 @@ button {
 
 /* Home */
 #home {
-  background: center/cover no-repeat 
+  background: center/cover no-repeat
   url("imgs/home-background.png");
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
 }
 
