--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ button {
   transition: all var(--animation-duration) ease-in;
 }
 
-.work_projects {
+.work__projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -386,6 +386,10 @@ button {
   margin: 30px 2px;
   background-color: rgb(252, 252, 129);
 }
+.project.invisible {
+  display: none;
+}
+
 .project__img {
   max-width: 100%;
   max-height: 100%;
