--- a/style.css
+++ b/style.css
@@ -375,6 +375,12 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
+}
+.work__projects.anim--out {
+  opacity: 0;
+  transform: scale(0.95) translateY(40px);
 }
 .project {
   position: relative;
