--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ button {
 }
 
 #navbar.navbar--dark {
-  background-color: var(--color-black);
+  background-color: rgb(230, 133, 233);
   padding: 8px;
   
 }
@@ -137,6 +137,7 @@ button {
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
+  border: 2px solid transparent;
 }
 
 /* class가 navbar__menu--item과 active가 동시에 성립할 때!(and)
@@ -144,12 +145,14 @@ button {
 둘 중 하나라도 성립할 때(or)는
 .navbar__menuu--item, .active
 이런 형태로 쓴다!! */
-.navbar__menu--item.active {
+
+/* .navbar__menu--item.active {
   border: 2px solid var(--color-white);
-}
+} */
 
 .navbar__menu--item:hover {
-  background-color: rgb(71, 126, 209);
+  border-color: var(--color-white);
+  background-color: var(--color-pink);
 }
 
 .navbar__toggle--btn {
@@ -162,7 +165,13 @@ button {
 }
 
 /* Arrow up */
-.arrow--up {
+.arrow {
+  position: fixed;
+  opacity: 0;
+}
+
+.arrow.arrow--up {
+  opacity: 1;
   position: fixed;
   width: 48px;
   height: 48px;
@@ -347,12 +356,12 @@ button {
   padding: 8px 48px;
 }
 
-.category__btn.active, .category__btn:hover {
+.category__btn.selected, .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
 }
 
-.category__btn.active .category__count, .category__btn:hover .category__count {
+.category__btn.selected .category__count, .category__btn:hover .category__count {
   opacity: 1;
   top: 0;
 }
