--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ button {
 .navbar__toggle--btn {
   position: absolute;
   right: 32px;
-  top: 24px;
+  top: 18px;
   font-size: 24px;
   color: var(--color-white);
   display: none;
@@ -220,7 +220,7 @@ button {
 }
 /* Seciton common */
 .section {
-  padding: 50px;
+  padding: 100px;
   text-align: center;
   margin: auto;
 }
@@ -509,7 +509,7 @@ button {
   }
   #navbar {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: baseline;
     background-color: var(--color-pink);
   }
   .navbar__menu {
