--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ button {
   margin: 0 4px;
   cursor: pointer;
   border-radius: var(--size-border-radius);
-  border: 2px solid transparent;
+  /* border: 2px solid transparent; */
 }
 
 /* class가 navbar__menu--item과 active가 동시에 성립할 때!(and)
@@ -147,10 +147,15 @@ button {
 이런 형태로 쓴다!! */
 
 /* .navbar__menu--item.active {
-  border: 2px solid var(--color-white);
+  
 } */
 
+.navbar__menu--item.active {
+  border: 2px solid var(--color-white);
+  /* border-color: 1px solid var(--color-white); */
+}
 .navbar__menu--item:hover {
+  border: 2px solid var(--color-white);
   border-color: var(--color-white);
   background-color: var(--color-pink);
 }
